--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>acerca</h1>
+    <div class="row">
+        <div class="col-12">
+            <h1>Acerca</h1>
+        </div>
+    </div>
 {% endblock %}
