--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,39 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="navbar" style="background-color: #0056b3; color: white;">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">onlyflans</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Índice</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/acerca/">Acerca</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/bienvenido/">Bienvenido</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+
+    {% block 'header' %}
+        {% include 'header.html' %}
+    {% endblock %}
+
+    {% block 'navbar' %}
+        {% include 'navbar.html' %}
+    {% endblock %}
     
-    <div class="container">
-        <div class="header" style="background-color: #f1f1f1; padding: 20px;">
-            <h1 class="text-dark">Header</h1>
-        </div>
-        <div class="navbar" style="background-color: #007bff; color: white; padding: 10px;">
-            <h2 class="text-light">Navbar</h2>
-        </div>
-        <div class="content" style="padding: 20px; background-color: #e9ecef;">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div class="footer" style="background-color: #f1f1f1; padding: 20px;">
-            <h3 class="text-dark">Footer</h3>
-        </div>
+    <div class="container mt-4">
+        {% block content %}
+        <!-- El contenido específico de cada página se mostrará aquí -->
+        {% endblock %}
     </div>
+
+    {% block 'footer' %}
+        {% include 'footer.html' %}
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoZnJ92sBW+qmj4P0tSf0BfD92m00qU8IoJ04fCeSXvPe5g" crossorigin="anonymous"></script>
 </body>
 </html>
