--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-12">
-            <h1>Acerca</h1>
-        </div>
-    </div>
+<div class="container">
+    <h1>Acerca de OnlyFlans</h1>
+    <p>OnlyFlans es una plataforma dedicada a los amantes de los flans. Aquí, celebramos la deliciosa variedad de este postre, que ha conquistado paladares alrededor del mundo.</p>
+    <h2>Nuestra Pasión por los Flans</h2>
+    <p>Desde el clásico flan de vainilla hasta innovadoras combinaciones de sabores, OnlyFlans es el lugar ideal para descubrir recetas, consejos y todo lo relacionado con este exquisito postre.</p>
+    <h2>Únete a Nuestra Comunidad</h2>
+    <p>Comparte tus recetas favoritas y disfruta de creaciones de otros entusiastas del flan. ¡Juntos, haremos de cada bocado una experiencia inolvidable!</p>
+</div>
 {% endblock %}
