--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>índice</h1>
+<div class="container mt-4">
+    <h1>Muestra de Flanes</h1>
+    <div class="row">
+        {% for flan in flanes %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="{{ flan.image_url }}" class="card-img-top" alt="{{ flan.name }}" style="height: 200px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ flan.name }}</h5>
+                        <p class="card-text">{{ flan.description }}</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+        {% empty %}
+            <p>No hay flanes disponibles.</p>
+        {% endfor %}
+    </div>
+</div>
+
 {% endblock %}
