--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -11,6 +11,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/bienvenido/">Bienvenido</a>
                 </li>
+                    <a class="nav-link" href="/contacto/">Contacto</a>
+                </li>
             </ul>
         </div>
     </nav>
