--- a/web/templates/welcome.html
+++ b/web/templates/welcome.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container mt-4">
+    <h1>Bienvenido</h1>
     <div class="row">
-        <div class="col-12">
-            <h1>Bienvenido cliente</h1>
-        </div>
+        {% for flan in flanes %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="{{ flan.image_url }}" class="card-img-top" alt="{{ flan.name }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ flan.name }}</h5>
+                        <p class="card-text">{{ flan.description }}</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+        {% empty %}
+            <p>No hay flanes privados disponibles.</p>
+        {% endfor %}
     </div>
+</div>
 {% endblock %}
