--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -3,14 +3,28 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Índice</a>
+                    <a class="nav-link" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/acerca/">Acerca</a>
                 </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/bienvenido/">Bienvenido</a>
+                    </li>
+                    <!-- Formulario para cerrar sesión -->
+                    <li class="nav-item">
+                        <form method="POST" action="{% url 'logout' %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link" style="background: none; border: none; color: white; cursor: pointer;">Cerrar sesión</button>
+                        </form>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/bienvenido/">Bienvenido</a>
-                </li>
                     <a class="nav-link" href="/contacto/">Contacto</a>
                 </li>
             </ul>
